refactor: 동아리 정보, 소개 사진 업로드, 사진 URL로직 변경